<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dragosien</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Funktion noch auf der To-Do-Liste</string>
    <string name="tab_partners">Partnersuche</string>
    <string name="tab_tables">Tabellen</string>
    <string name="tab_ticker">Live-Ticker</string>
    <string name="search_parter_caption_sex">Geschlecht</string>
    <string name="search_parter_caption_values">Fähigkeitswerte</string>
    <string name="search_parter_caption_colors">Farben</string>
    <string name="search_parter_caption_dragball_position">Dragball Position</string>
    <string name="caption_button_search_partner">Partner suchen</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_result_title">Ergebnis der Partnersuche</string>
    <string name="caption_dragon_name">Drache:</string>
    <string name="caption_dragon_owner">Besitzer:</string>
    <string name="strength">Kraft</string>
    <string name="agility">Geschicklichkeit</string>
    <string name="firepower">Feuerkraft</string>
    <string name="willpower">Willenskraft</string>
    <string name="intelligence">Intelligenz</string>
    <string name="searching_for_partner">Es wird ein Partner gesucht…</string>
    <string name="dragon">Drache</string>
    <string name="egg">Ei</string>
    <string name="main_color">Hauptfarbe Ei</string>
    <string name="secondary_color">Nebenfarbe Ei</string>
    <string name="your_dragon_title">Dein Drache</string>

</resources>
